--- a/main.html
+++ b/main.html
@@ -8,6 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h1>Time, Space and Complexity</h1>
+		<p>Time complexity, efficient</p>
+		<p><b>Space Complexity</b>, O(n)</p>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
